# log-analyzer

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  report.json  requirements.txt
.github/workflows/: docker-publish.yml
analyzer/: cli.py  log_parser.py  metrics.py  reporter.py  service.py  webapp.py
scripts/: run_analyzer.sh  run_ui.sh
tests/: test_cli.py  test_metrics.py  test_parser.py  test_reporter.py  test_service.py  test_webapp.py
web/: app.js  index.html  styles.css
